# haskell-exemplos

./: Dockerfile  README.md  haskell-exemplos.cabal
cabal-exemplo/: CHANGELOG.md  cabal-exemplo.cabal  pessoas.json  pessoasAtualizadas.json
cabal-exemplo/app/: Main.hs
src/: AltaOrdem.hs  ControleFluxo.hs  Exemplos.hs  Files.hs  Json.hs  LearnHaskell.hs  Listas.hs  Main.hs  Operadores.hs  Programa.hs  ProgramaCrud.hs  ProgramaMenuSimples.hs  Teste.hs  TiposAlgebricos.hs  TiposDeDados.hs  TiposRecursivos.hs  TodoGtk.hs  arquivo.txt  todogtk.cabal
src/gtk/: Basico.hs  BasicoBox.hs  BasicoEntry.hs  BasicoTable.hs  GridCrud.hs  GridView.hs
src/unit-test/: CHANGELOG.md  LICENSE  unit-test.cabal
src/unit-test/test/: Main.hs  Somar.hs  SomarTest.hs
