name:                haskell-exemplos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adrwtr/haskell-exemplos
license:             BSD3
license-file:        LICENSE
author:              Adriano Waltrick
maintainer:          akuma.majunia@gmail.com
copyright:           2021 Adriano Waltrick
category:            PF
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable projeto-teste
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
